radiant/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    # kubernetes.io/tls-acme: "true"
    # ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  # tls:
  #   - hosts:
  #     - test.scan.in
  #    secretName: test.scan.in  #automatically create by acme
  rules:
  - host: fourtimes.ml
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
